# serializer version: 1
# name: test_coref_parsed_snapshot[bigbluebutton-call0]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 2,
        'antecedent_text': "BigBlueButton's components",
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'HTML5 Client',
        'reference': 'each component',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 6,
        'antecedent_text': 'The HTML5 client connects directly with the BigBlueButton server over port 443 (SSL), from loading the BigBlueButton client to making a web socket connection.',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'HTML5 Client',
        'reference': 'These connections',
        'sentence': 7,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call1]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 6,
        'antecedent_text': 'The HTML5 client connects directly with the BigBlueButton server over port 443 (SSL), from loading the BigBlueButton client to making a web socket connection.',
        'antecedent_via_alias': False,
        'case': 2,
        'component': 'HTML5 Client',
        'reference': 'The client side',
        'sentence': 12,
      }),
      dict({
        'antecedent_sentence': 8,
        'antecedent_text': 'The HTML5 server sits behind nginx.',
        'antecedent_via_alias': False,
        'case': 2,
        'component': 'HTML5 Server',
        'reference': 'the server side',
        'sentence': 12,
      }),
      dict({
        'antecedent_sentence': 14,
        'antecedent_text': 'The following diagram gives an overview of the architecture of the HTML5 client and its communications with the other components in BigBlueButton.',
        'antecedent_via_alias': False,
        'case': 4,
        'component': 'HTML5 Client',
        'reference': 'the other components',
        'sentence': 14,
      }),
      dict({
        'antecedent_sentence': 8,
        'antecedent_text': 'The HTML5 server sits behind nginx.',
        'antecedent_via_alias': False,
        'case': 5,
        'component': 'HTML5 Server',
        'reference': 'HTML5 server component',
        'sentence': 15,
      }),
      dict({
        'antecedent_sentence': 15,
        'antecedent_text': 'Scalability of HTML5 server component.',
        'antecedent_via_alias': True,
        'case': 7,
        'component': 'HTML5 Server',
        'reference': 'This process',
        'sentence': 17,
      }),
      dict({
        'antecedent_sentence': 19,
        'antecedent_text': 'BigBlueButton 2.3 moves away from a single nodejs process for bbb-html5 towards multiple nodejs processes handling incoming messages from clients.',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'HTML5 Server',
        'reference': 'This',
        'sentence': 20,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call2]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 21,
        'antecedent_text': 'bbb-html5 uses 2 "frontend" and two "backend" processes',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'HTML5 Client',
        'reference': 'Frontends',
        'sentence': 24,
      }),
      dict({
        'antecedent_sentence': 21,
        'antecedent_text': 'bbb-html5 uses 2 "frontend" and two "backend" processes',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'HTML5 Client',
        'reference': 'Frontends',
        'sentence': 25,
      }),
      dict({
        'antecedent_sentence': 21,
        'antecedent_text': 'bbb-html5 uses 2 "frontend" and two "backend" processes',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'HTML5 Client',
        'reference': 'Frontends',
        'sentence': 26,
      }),
      dict({
        'antecedent_sentence': 21,
        'antecedent_text': 'bbb-html5 uses 2 "frontend" and two "backend" processes',
        'antecedent_via_alias': True,
        'case': 7,
        'component': 'HTML5 Client',
        'reference': 'Frontends',
        'sentence': 27,
      }),
      dict({
        'antecedent_sentence': 21,
        'antecedent_text': 'bbb-html5 uses 2 "frontend" and two "backend" processes',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'HTML5 Client',
        'reference': 'Frontends',
        'sentence': 28,
      }),
      dict({
        'antecedent_sentence': 21,
        'antecedent_text': 'bbb-html5 uses 2 "frontend" and two "backend" processes',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'HTML5 Server',
        'reference': 'Backends',
        'sentence': 29,
      }),
      dict({
        'antecedent_sentence': 30,
        'antecedent_text': 'bbb-web',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'BBB web',
        'reference': 'bbb-web',
        'sentence': 30,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call3]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 30,
        'antecedent_text': 'bbb-web splits the load in round-robin fashion by assigning an instanceId',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'BBB web',
        'reference': 'the associated instanceId',
        'sentence': 31,
      }),
      dict({
        'antecedent_sentence': 37,
        'antecedent_text': 'BigBlueButton web application is a Java-based application written in Scala.',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'BBB web',
        'reference': 'It',
        'sentence': 38,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call4]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 37,
        'antecedent_text': 'BigBlueButton web application is a Java-based application written in Scala.',
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'BBB web',
        'reference': 'its own front-end',
        'sentence': 42,
      }),
      dict({
        'antecedent_sentence': 37,
        'antecedent_text': 'BigBlueButton web application is a Java-based application written in Scala.',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'BBB web',
        'reference': 'The BigBlueButton',
        'sentence': 44,
      }),
      dict({
        'antecedent_sentence': 42,
        'antecedent_text': 'BigBlueButton comes with its own front-end called Greenlight.',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'BBB web',
        'reference': 'they',
        'sentence': 45,
      }),
      dict({
        'antecedent_sentence': 49,
        'antecedent_text': 'all events are stored in Redis DB.',
        'antecedent_via_alias': False,
        'case': 10,
        'component': 'Redis DB',
        'reference': 'the recorded events',
        'sentence': 50,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call5]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 51,
        'antecedent_text': 'Apps akka.',
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'Apps',
        'reference': 'the main application',
        'sentence': 52,
      }),
      dict({
        'antecedent_sentence': 52,
        'antecedent_text': 'BigBlueButton Apps is the main application that pulls together the different applications to provide real-time collaboration in the meeting.',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Apps',
        'reference': 'It',
        'sentence': 53,
      }),
      dict({
        'antecedent_sentence': 55,
        'antecedent_text': 'The meeting business logic is in the MeetingActor.',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'Apps',
        'reference': 'This',
        'sentence': 56,
      }),
      dict({
        'antecedent_sentence': 57,
        'antecedent_text': 'FSESL akka.',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'FSESL',
        'reference': 'the component that integrates with FreeSWITCH',
        'sentence': 58,
      }),
      dict({
        'antecedent_sentence': 58,
        'antecedent_text': 'We have extracted out the component that integrates with FreeSWITCH into it’s own application.',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'FSESL',
        'reference': 'This',
        'sentence': 59,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call6]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 68,
        'antecedent_text': 'Kurento Media Server KMS is a media server that implements both SFU and MCU models.',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'kurento',
        'reference': 'KMS',
        'sentence': 69,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call7]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 66,
        'antecedent_text': 'FreeSWITCH can also be integrated with VOIP providers so that users who are not able to join using the headset will be able to call in using their phone.',
        'antecedent_via_alias': False,
        'case': 2,
        'component': 'FreeSWITCH',
        'reference': 'the voice conference (running in FreeSWITCH)',
        'sentence': 72,
      }),
      dict({
        'antecedent_sentence': 72,
        'antecedent_text': 'A user can join the voice conference (running in FreeSWITCH) from the BigBlueButton HTML5 client or through the phone.',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'HTML5 Client',
        'reference': 'the client',
        'sentence': 73,
      }),
      dict({
        'antecedent_sentence': 72,
        'antecedent_text': 'A user can join the voice conference (running in FreeSWITCH) from the BigBlueButton HTML5 client or through the phone.',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'HTML5 Client',
        'reference': 'the BigBlueButton client',
        'sentence': 73,
      }),
      dict({
        'antecedent_sentence': 73,
        'antecedent_text': 'When joining through the client, the user can choose to join Microphone or Listen Only, and the BigBlueButton client will make an audio connection to the server via WebRTC.',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'HTML5 Client',
        'reference': 'the client',
        'sentence': 76,
      }),
      dict({
        'antecedent_sentence': 78,
        'antecedent_text': 'The PDF document is then converted into scalable vector graphics (SVG) via bbb-web.',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'BBB web',
        'reference': 'bbb-web',
        'sentence': 78,
      }),
      dict({
        'antecedent_sentence': 76,
        'antecedent_text': 'Uploaded presentations go through a conversion process in order to be displayed inside the client.',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'HTML5 Client',
        'reference': 'the client',
        'sentence': 79,
      }),
      dict({
        'antecedent_sentence': 79,
        'antecedent_text': 'The conversion process sends progress messages to the client through the Redis pubsub.',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'Redis PubSub',
        'reference': 'the Redis pubsub',
        'sentence': 79,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[bigbluebutton-call8]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 83,
        'antecedent_text': 'the SVG conversion flow',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'Presentation Conversion',
        'reference': 'It',
        'sentence': 84,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[jabref-call0]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 6,
        'antecedent_text': 'The logic',
        'antecedent_via_alias': False,
        'case': 6,
        'component': 'logic',
        'reference': 'it',
        'sentence': 6,
      }),
      dict({
        'antecedent_sentence': 2,
        'antecedent_text': 'preferences',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'preferences',
        'reference': 'his preferences',
        'sentence': 7,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[jabref-call1]
  dict({
    'resolutions': list([
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[mediastore-call0]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 8,
        'antecedent_text': 'The MediaManagement component coordinates the communication of other components.',
        'antecedent_via_alias': False,
        'case': 9,
        'component': 'MediaManagement',
        'reference': 'it',
        'sentence': 9,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[mediastore-call1]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 14,
        'antecedent_text': 'all downloaded files are watermarked',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'TagWatermarking',
        'reference': 'this end',
        'sentence': 15,
      }),
      dict({
        'antecedent_sentence': 16,
        'antecedent_text': 'the TagWatermarking component',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'TagWatermarking',
        'reference': 'these audio files',
        'sentence': 17,
      }),
      dict({
        'antecedent_sentence': 15,
        'antecedent_text': 'reencoded',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'Reencoding',
        'reference': 'The ReEncoder component',
        'sentence': 20,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[mediastore-call2]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 20,
        'antecedent_text': 'The ReEncoder component converts the bit rates of audio files.',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'Reencoding',
        'reference': 'This',
        'sentence': 21,
      }),
      dict({
        'antecedent_sentence': 23,
        'antecedent_text': 'The Database component represents an actual database (e.g., MySQL).',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'DB',
        'reference': 'It',
        'sentence': 24,
      }),
      dict({
        'antecedent_sentence': 27,
        'antecedent_text': 'The MediaAccess component encapsulates database access for meta-data of audio files.',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'MediaAccess',
        'reference': 'it',
        'sentence': 28,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[mediastore-call3]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 31,
        'antecedent_text': 'The Database component',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'DB',
        'reference': 'The Database component',
        'sentence': 31,
      }),
      dict({
        'antecedent_sentence': 31,
        'antecedent_text': 'The Database component',
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'DB',
        'reference': 'the Database component',
        'sentence': 32,
      }),
      dict({
        'antecedent_sentence': 33,
        'antecedent_text': 'the DataStorage',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'FileStorage',
        'reference': 'the DataStorage',
        'sentence': 33,
      }),
      dict({
        'antecedent_sentence': 32,
        'antecedent_text': 'the Database component',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'DB',
        'reference': 'the Database',
        'sentence': 34,
      }),
      dict({
        'antecedent_sentence': 33,
        'antecedent_text': 'the DataStorage',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'FileStorage',
        'reference': 'the DataStorage',
        'sentence': 35,
      }),
      dict({
        'antecedent_sentence': 33,
        'antecedent_text': 'the DataStorage',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'FileStorage',
        'reference': 'the DataStorage',
        'sentence': 36,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call0]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'UI Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'UI',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'Logic Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Logic',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'Storage Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Storage',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'Common Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Common',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'Test Driver Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Test Driver',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'E2E Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'E2E',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'Client Component',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Client',
        'reference': 'the main components',
        'sentence': 3,
      }),
      dict({
        'antecedent_sentence': 4,
        'antecedent_text': 'The UI Browser',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'UI',
        'reference': 'This UI',
        'sentence': 5,
      }),
      dict({
        'antecedent_sentence': 1,
        'antecedent_text': 'Storage Component',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'Storage',
        'reference': 'The storage layer of the application',
        'sentence': 9,
      }),
      dict({
        'antecedent_sentence': 9,
        'antecedent_text': 'Test Driver',
        'antecedent_via_alias': False,
        'case': 10,
        'component': 'Test Driver',
        'reference': 'the Test Driver',
        'sentence': 10,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call10]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 101,
        'antecedent_text': 'Storage level',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'Storage',
        'reference': 'Storage level',
        'sentence': 101,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call11]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 118,
        'antecedent_text': 'The Storage component performs CRUD (Create, Read, Update, Delete) operations on data entities individually.',
        'antecedent_via_alias': False,
        'case': 9,
        'component': 'Storage',
        'reference': 'It',
        'sentence': 119,
      }),
      dict({
        'antecedent_sentence': 118,
        'antecedent_text': 'The Storage component performs CRUD (Create, Read, Update, Delete) operations on data entities individually.',
        'antecedent_via_alias': False,
        'case': 10,
        'component': 'Storage',
        'reference': 'it',
        'sentence': 120,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call12]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 123,
        'antecedent_text': 'All GQL queries are to be contained inside the Storage component.',
        'antecedent_via_alias': False,
        'case': 5,
        'component': 'Storage',
        'reference': 'this component',
        'sentence': 125,
      }),
      dict({
        'antecedent_sentence': 126,
        'antecedent_text': 'Instead, a corresponding non-persistent data transfer object named Attributes (e.g., CourseAttributes is the data transfer object for Course entities) object is returned.',
        'antecedent_via_alias': True,
        'case': 7,
        'component': 'Common',
        'reference': 'These datatransfer classes',
        'sentence': 127,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call13]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 128,
        'antecedent_text': 'The Storage component does not perform any cascade delete/create operations.',
        'antecedent_via_alias': False,
        'case': 1,
        'component': 'Storage',
        'reference': 'the component',
        'sentence': 131,
      }),
      dict({
        'antecedent_sentence': 134,
        'antecedent_text': 'the navigability of the association links between entity objects appear to be in the reverse direction',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'Storage',
        'reference': 'This',
        'sentence': 135,
      }),
      dict({
        'antecedent_sentence': 136,
        'antecedent_text': 'Db classes',
        'antecedent_via_alias': True,
        'case': 7,
        'component': 'Storage',
        'reference': 'These classes',
        'sentence': 137,
      }),
      dict({
        'antecedent_sentence': 138,
        'antecedent_text': 'Add and Delete operations try to wait until data is persisted in the datastore before returning.',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'Storage',
        'reference': 'This',
        'sentence': 139,
      }),
      dict({
        'antecedent_sentence': 138,
        'antecedent_text': 'Add and Delete operations try to wait until data is persisted in the datastore before returning.',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'Storage',
        'reference': 'it',
        'sentence': 140,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call14]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 137,
        'antecedent_text': 'These classes act as the bridge to the GAE Datastore.',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'GAE Datastore',
        'reference': "the Google's distributed datastore",
        'sentence': 141,
      }),
      dict({
        'antecedent_sentence': 141,
        'antecedent_text': "Eventual consistency here means it takes some time for a database operation to propagate across all serves of the Google's distributed datastore.",
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'GAE Datastore',
        'reference': 'the data',
        'sentence': 142,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call15]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 155,
        'antecedent_text': 'The Common component contains common utilities used across TEAMMATES.',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'Common',
        'reference': 'Package overview',
        'sentence': 156,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call16]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 160,
        'antecedent_text': 'common.datatransfer package contains lightweight data transfer object classes for transferring data among components.',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'Common',
        'reference': 'They',
        'sentence': 161,
      }),
      dict({
        'antecedent_sentence': 163,
        'antecedent_text': 'Test Driver can use the DataBundle in this manner to send an arbitrary number of objects to be persisted in the database.',
        'antecedent_via_alias': False,
        'case': 3,
        'component': 'Test Driver',
        'reference': 'Test Driver',
        'sentence': 163,
      }),
      dict({
        'antecedent_sentence': 160,
        'antecedent_text': 'common.datatransfer package contains lightweight data transfer object classes for transferring data among components.',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'Common',
        'reference': 'these classes',
        'sentence': 166,
      }),
      dict({
        'antecedent_sentence': 160,
        'antecedent_text': 'common.datatransfer package contains lightweight data transfer object classes for transferring data among components.',
        'antecedent_via_alias': True,
        'case': 7,
        'component': 'Common',
        'reference': 'These classes',
        'sentence': 167,
      }),
      dict({
        'antecedent_sentence': 163,
        'antecedent_text': 'Test Driver can use the DataBundle in this manner to send an arbitrary number of objects to be persisted in the database.',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'Test Driver',
        'reference': 'This component',
        'sentence': 168,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call17]
  dict({
    'resolutions': list([
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call18]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 185,
        'antecedent_text': 'The E2E component has no knowledge of the internal workings of the application and can only interact either with Web browser as a whole application or REST API calls for the back-end logic.',
        'antecedent_via_alias': False,
        'case': 6,
        'component': 'E2E',
        'reference': 'Its',
        'sentence': 186,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call19]
  dict({
    'resolutions': list([
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call1]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 15,
        'antecedent_text': 'The E2E end-to-end component',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'E2E',
        'reference': 'Its',
        'sentence': 16,
      }),
      dict({
        'antecedent_sentence': 18,
        'antecedent_text': 'The Client component',
        'antecedent_via_alias': False,
        'case': 9,
        'component': 'Client',
        'reference': 'It',
        'sentence': 19,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call2]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 25,
        'antecedent_text': 'the UI component',
        'antecedent_via_alias': False,
        'case': 4,
        'component': 'UI',
        'reference': 'It',
        'sentence': 24,
      }),
      dict({
        'antecedent_sentence': 24,
        'antecedent_text': 'the front-end of the application',
        'antecedent_via_alias': True,
        'case': 7,
        'component': 'UI',
        'reference': 'It',
        'sentence': 27,
      }),
      dict({
        'antecedent_sentence': 29,
        'antecedent_text': 'The UI component is the first stop for 99% of all requests that are received by the application.',
        'antecedent_via_alias': False,
        'case': 10,
        'component': 'UI',
        'reference': 'Such a request',
        'sentence': 30,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call3]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 29,
        'antecedent_text': 'The UI component is the first stop for 99% of all requests that are received by the application.',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'UI',
        'reference': 'The request',
        'sentence': 37,
      }),
      dict({
        'antecedent_sentence': 29,
        'antecedent_text': 'The UI component is the first stop for 99% of all requests that are received by the application.',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'UI',
        'reference': 'The initial request',
        'sentence': 38,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call4]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 47,
        'antecedent_text': 'the Logic component',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'Logic',
        'reference': 'it',
        'sentence': 47,
      }),
      dict({
        'antecedent_sentence': 50,
        'antecedent_text': 'the front-end',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'UI',
        'reference': 'it',
        'sentence': 50,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call5]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 58,
        'antecedent_text': 'the GAE server',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'GAE Datastore',
        'reference': 'the GAE server',
        'sentence': 58,
      }),
      dict({
        'antecedent_sentence': 58,
        'antecedent_text': 'the GAE server',
        'antecedent_via_alias': True,
        'case': 9,
        'component': 'GAE Datastore',
        'reference': 'This type of request',
        'sentence': 59,
      }),
      dict({
        'antecedent_sentence': 58,
        'antecedent_text': 'the GAE server',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'GAE Datastore',
        'reference': 'the source of the request',
        'sentence': 60,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call6]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 68,
        'antecedent_text': 'the Logic component',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'Logic',
        'reference': 'the corresponding AutomatedAction',
        'sentence': 68,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call7]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 71,
        'antecedent_text': 'Cron jobs are jobs that are automatically scheduled for a specified period of time',
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'Common',
        'reference': 'It',
        'sentence': 72,
      }),
      dict({
        'antecedent_sentence': 73,
        'antecedent_text': 'Task queue workers are hybrids of user-invoked and GAE-invoked',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'Common',
        'reference': 'This',
        'sentence': 74,
      }),
      dict({
        'antecedent_sentence': 73,
        'antecedent_text': 'Task queue workers are hybrids of user-invoked and GAE-invoked',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'Common',
        'reference': 'It',
        'sentence': 75,
      }),
      dict({
        'antecedent_sentence': 75,
        'antecedent_text': 'the Const class',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'Common',
        'reference': 'we',
        'sentence': 76,
      }),
      dict({
        'antecedent_sentence': 77,
        'antecedent_text': 'The Logic component handles the business logic of TEAMMATES.',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'Logic',
        'reference': 'it',
        'sentence': 78,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call8]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 81,
        'antecedent_text': 'the UI component',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'UI',
        'reference': 'the UI component',
        'sentence': 81,
      }),
      dict({
        'antecedent_sentence': 77,
        'antecedent_text': 'The Logic component handles the business logic of TEAMMATES.',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'Logic',
        'reference': 'the component',
        'sentence': 85,
      }),
      dict({
        'antecedent_sentence': 81,
        'antecedent_text': 'the UI component',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'UI',
        'reference': 'the UI',
        'sentence': 85,
      }),
      dict({
        'antecedent_sentence': 88,
        'antecedent_text': 'the Storage component',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'Storage',
        'reference': 'the Storage component',
        'sentence': 88,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teammates-call9]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 91,
        'antecedent_text': 'EmailSender sends email with the provider chosen based on the build configuration.',
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'Logic',
        'reference': 'It',
        'sentence': 92,
      }),
      dict({
        'antecedent_sentence': 93,
        'antecedent_text': 'TaskQueuer adds tasks to the task queue.',
        'antecedent_via_alias': True,
        'case': 4,
        'component': 'Logic',
        'reference': 'It',
        'sentence': 94,
      }),
      dict({
        'antecedent_sentence': 87,
        'antecedent_text': 'Logic API is represented by the classes Logic, GateKeeper, EmailGenerator, EmailSender, TaskQueuer.',
        'antecedent_via_alias': False,
        'case': 6,
        'component': 'Logic',
        'reference': 'this component',
        'sentence': 96,
      }),
      dict({
        'antecedent_sentence': 97,
        'antecedent_text': 'The UI is expected to check access control (using GateKeeper class) before calling a method in the Logic.',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'UI',
        'reference': 'The UI',
        'sentence': 97,
      }),
      dict({
        'antecedent_sentence': 97,
        'antecedent_text': 'The UI is expected to check access control (using GateKeeper class) before calling a method in the Logic.',
        'antecedent_via_alias': False,
        'case': 7,
        'component': 'Logic',
        'reference': 'the Logic',
        'sentence': 97,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teastore-call0]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 5,
        'antecedent_text': 'The WebUI provides the TeaStore front-end using Servlets in combination with JSP files.',
        'antecedent_via_alias': False,
        'case': 6,
        'component': 'WebUI',
        'reference': 'It',
        'sentence': 6,
      }),
      dict({
        'antecedent_sentence': 7,
        'antecedent_text': 'the WebUi',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'WebUI',
        'reference': 'The UI',
        'sentence': 8,
      }),
      dict({
        'antecedent_sentence': 10,
        'antecedent_text': 'The Image Provider',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'ImageProvider',
        'reference': 'It',
        'sentence': 10,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teastore-call1]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 10,
        'antecedent_text': 'The Image Provider delivers images to the WebUI as base64 encoded strings to embed them in the final HTML.',
        'antecedent_via_alias': True,
        'case': 1,
        'component': 'ImageProvider',
        'reference': 'It',
        'sentence': 11,
      }),
      dict({
        'antecedent_sentence': 18,
        'antecedent_text': 'The Auth service handles user and session authentication.',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'Auth',
        'reference': 'The Auth service',
        'sentence': 18,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teastore-call2]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 22,
        'antecedent_text': 'The Persistence service provides access to the data persisted in the relational database back-end.',
        'antecedent_via_alias': False,
        'case': 3,
        'component': 'Persistence',
        'reference': 'It',
        'sentence': 23,
      }),
      dict({
        'antecedent_sentence': 22,
        'antecedent_text': 'The Persistence service provides access to the data persisted in the relational database back-end.',
        'antecedent_via_alias': False,
        'case': 4,
        'component': 'Persistence',
        'reference': 'It',
        'sentence': 24,
      }),
      dict({
        'antecedent_sentence': 25,
        'antecedent_text': 'The persistence provider uses a second level entity cache provided by the JPA implementation.',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'Persistence',
        'reference': 'it',
        'sentence': 26,
      }),
      dict({
        'antecedent_sentence': 27,
        'antecedent_text': 'The Recommender is used to generate individual product recommendations for each user.',
        'antecedent_via_alias': False,
        'case': 8,
        'component': 'Recommender',
        'reference': 'It',
        'sentence': 28,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teastore-call3]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 32,
        'antecedent_text': 'Slope One',
        'antecedent_via_alias': True,
        'case': 2,
        'component': 'SlopeOneRecommender',
        'reference': 'Slope One',
        'sentence': 32,
      }),
      dict({
        'antecedent_sentence': 32,
        'antecedent_text': 'Slope One',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'SlopeOneRecommender',
        'reference': 'the algorithm',
        'sentence': 33,
      }),
      dict({
        'antecedent_sentence': 35,
        'antecedent_text': 'order-based nearest-neighbor approach',
        'antecedent_via_alias': True,
        'case': 5,
        'component': 'OrderBasedRecommender',
        'reference': 'one order-based nearest-neighbor approach',
        'sentence': 35,
      }),
      dict({
        'antecedent_sentence': 35,
        'antecedent_text': 'order-based nearest-neighbor approach',
        'antecedent_via_alias': True,
        'case': 6,
        'component': 'OrderBasedRecommender',
        'reference': 'Its',
        'sentence': 36,
      }),
      dict({
        'antecedent_sentence': 37,
        'antecedent_text': 'The Registry',
        'antecedent_via_alias': True,
        'case': 8,
        'component': 'Registry',
        'reference': 'the registry',
        'sentence': 38,
      }),
      dict({
        'antecedent_sentence': 37,
        'antecedent_text': 'The Registry',
        'antecedent_via_alias': True,
        'case': 10,
        'component': 'Registry',
        'reference': 'the register function',
        'sentence': 40,
      }),
    ]),
  })
# ---
# name: test_coref_parsed_snapshot[teastore-call4]
  dict({
    'resolutions': list([
      dict({
        'antecedent_sentence': 41,
        'antecedent_text': 'one single registry',
        'antecedent_via_alias': True,
        'case': 3,
        'component': 'Registry',
        'reference': 'it',
        'sentence': 43,
      }),
    ]),
  })
# ---
